--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
     "@types/react-dom": "^16.9.7",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
-    "microbundle-crl": "^0.13.10",
-    "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
@@ -50,6 +48,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
+    "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
@@ -59,5 +58,15 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "@coinbase/wallet-sdk": "^3.6.6",
+    "@metamask/detect-provider": "2.0.0",
+    "@web3-react/coinbase-wallet": "^8.2.0",
+    "@web3-react/core": "^8.2.0",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/metamask": "8.2.1",
+    "@web3-react/walletconnect": "^8.2.0",
+    "ethers": "5.7.2"
+  }
 }
