--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "target": "es6",
+    "resolveJsonModule": true,
     "outDir": "dist",
     "module": "esnext",
     "lib": ["dom", "esnext"],
